
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct ion_handle {int dummy; } ;
struct ion_allocation_data {int len; int align; struct ion_handle* handle; int flags; } ;


 int ION_HEAP_TYPE_CARVEOUT ;
 int ION_IOC_ALLOC ;
 int ioctl (int,int ,struct ion_allocation_data*) ;
 int perror (char*) ;

int alloc_ion_memory(int client_fd,int size,struct ion_handle** pphandle){
 int ret = -1;

 struct ion_allocation_data data;


 data.len = size;
 data.align = size;
 data.flags = ION_HEAP_TYPE_CARVEOUT ;



 ret = ioctl(client_fd, ION_IOC_ALLOC, &data);
 if (ret<0){
  perror("ION_IOC_ALLOC");
 }
 *pphandle = data.handle;
 return ret;

}
